<resources>
    <string name="app_name">BitVault Launcher</string>

    <!--Main Menu of Launcher-->
    <string name="daily_activities">Daily Activities</string>
    <string name="prayer_room">Prayer Room</string>
    <string name="book">Books</string>
    <string name="apps">Apps</string>
    <string name="shop">Shop</string>
    <!--Other Kids App-->
    <string name="videos">Videos</string>
    <string name="games">Games</string>
    <string name="songs">Songs</string>

    <string name="app_not_found">app not found. Please download it first from our BibleZon Store.</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>

    <!--Slide Menu View String-->
    <string name="home_apps">Home</string>
    <string name="hide_apps">Hide Apps</string>
    <string name="remove_apps">Remove Apps</string>
    <string name="password_protection">Password Protection</string>
    <string name="silence_phone">Silence/Normal Phone</string>
    <string name="airplane_mode_phone">Enable/Disable Airplane Mode</string>
    <string name="messages">Messages</string>
    <string name="feedback">Feedback</string>
    <string name="reminder">Reminder</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="user_profile">Profile</string>
    <string name="liturgical_calendar">Liturgical Calendar</string>

    <!--API Errors-->
    <string name="network_error">Please check your internet connection.</string>
    <string name="network_slow_error">Slow internet connection.</string>
    <string name="server_error">Something wrong on server. Please try again.</string>
    <string name="auth_token_null">Your authentication token is empty. Please try again.</string>
    <string name="player_error">Audio not found. Please try again.</string>

    <!--Login Signup Strings-->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="apply">Apply</string>
    <string name="dismiss">Dismiss</string>
    <string name="change_pass">Change Password</string>
    <string name="already_have_account">I have already an account? <b>Sign In</b></string>
    <string name="dont_have_account">Don\'t have an account? <b>Sign Up</b></string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_password_hint">Enter Password Hint</string>
    <string name="enter_your_email">Enter Your E-mail</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="enter_your_old_password">Enter Your Old Password</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="show_password">Show Password</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_email_empty">Email address can not be empty.</string>
    <string name="pwd_match_error">Password did not match</string>
    <string name="err_msg_password">Enter password</string>
    <string name="err_confirm_msg_password">Enter confirm password</string>
    <string name="err_password_not_match">Password and confirm password not matched.</string>
    <string name="err_msg_username">Enter valid username</string>
    <string name="err_msg_password_hint">Enter password protection hint</string>
    <string name="password_protection_enabled">Password protection is enable.</string>
    <string name="force_user_to_set_pass">Hiding apps successful.\nPlease set password to protect your changes.</string>
    <string name="hide_apps_success">Hiding apps successful.</string>
    <string name="reminder_set_success">Reminder set successfully.</string>
    <string name="wrong_password">Wrong password.\nPlease try again.</string>
    <string name="enable_silent_profile">Enable silent mode</string>
    <string name="disable_silent_profile">Disable silent mode</string>
    <string name="silent_mode_enabled">Silent mode is enabled of your phone.</string>
    <string name="silent_mode_disable">Silent mode is disabled of your phone.</string>
    <!--Search App View-->
    <string name="search_app">Search for apps</string>
    <string name="please_enter_name_app">Please enter name of app.</string>
    <string name="pick_image_intent_text">Please Choose Image Picker</string>

    <!--New Add Reminder GUI-->
    <string name="add_start_date">Please Choose Start Date</string>
    <string name="add_end_date">Please Choose End Date</string>
    <string name="add_reminder_time">Please Choose Reminder Time</string>
    <string name="reminder_title">Reminder title</string>
    <string name="reminder_title_error">Reminder title is empty.</string>
    <string name="add_alarm">Prayer Alarm</string>
    <string name="vibration">Vibrate</string>
    <!--WeekDay List-->
    <string name="sunday">Su</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <!--Add Reminder Screen-->
    <string name="choose_pray">Prayer</string>
    <string name="choose_ringtone">Ringtone</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="delete_reminder_confirmation">Are you sure you want to delete reminder?</string>


</resources>
