<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout"></include>

    <ScrollView
        android:id="@+id/signup_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:isScrollContainer="false"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/signup_form_rl"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pwd_txtinpt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_txtinpt"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textColorHint="@color/sign_in_sign_up_txt_hint_color"
                app:hintTextAppearance="@style/whiteTextInputLayout">

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_icon_black"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:hint="@string/enter_your_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/sign_in_sign_up_txt_color"
                    android:textColorHint="@color/sign_in_sign_up_txt_hint_color"
                    android:textSize="@dimen/button_txt_size"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_password_txtinpt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_txtinpt"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textColorHint="@color/sign_in_sign_up_txt_hint_color"
                app:hintTextAppearance="@style/whiteTextInputLayout">

                <EditText
                    android:id="@+id/confirm_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_icon_black"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:hint="@string/confirm_your_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/sign_in_sign_up_txt_color"
                    android:textColorHint="@color/sign_in_sign_up_txt_hint_color"
                    android:textSize="@dimen/button_txt_size"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordHint_txtinpt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/sign_in_sign_up_txt_hint_color"
                app:hintTextAppearance="@style/whiteTextInputLayout">

                <EditText
                    android:id="@+id/passwordHint_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_icon_black"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:hint="@string/enter_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/sign_in_sign_up_txt_color"
                    android:textColorHint="@color/sign_in_sign_up_txt_hint_color"
                    android:textSize="@dimen/button_txt_size"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp">

                <CheckBox
                    android:id="@+id/showPasswordCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:text="@string/show_password"
                    android:textColorHint="@color/sign_in_sign_up_txt_hint_color"
                    android:textSize="@dimen/button_txt_size"
                    android:textStyle="normal" />
            </LinearLayout>


            <Button
                android:id="@+id/savePassword"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_20dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/button_txt_size"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/enterPasswordView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/unlock_password_view"></include>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loadingBitvault"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loading_bitvault"></RelativeLayout>

</RelativeLayout>
